typescript/checker/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            23,
        ),
        hi: BytePos(
            26,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment2.ts:1:10
  |
1 | export = foo;
  |          ^^^

